[metadata]
name = deseret-tools
version = 0.0.1
author = Neal Davis
author_email = davis68@illinois.edu
description = Tools for working with the Deseret alphabet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sigilante/deseret-tools
project_urls =
    Bug Tracker = https://github.com/sigilante/deseret-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
